--- a/home.html
+++ b/home.html
@@ -35,18 +35,18 @@
                     <h1>PAGE</h1>
                 </div>
                 <div class="mainImage">
-                    <img src="/ui/images/pngegg 1.png" alt="">
+                    <img src="pngegg 1.png" alt="">
                 </div>
             </div>
             <div class="downbtn">
-                <button><a href="#service"><img src="/ui/images/icons8-thick-arrow-pointing-down-24.png" alt=""></a></button>
+                <button><a href="#service"><img src="icons8-thick-arrow-pointing-down-24.png" alt=""></a></button>
             </div>
         </div>
         <div class="container2">
             <div class="innerContainer2">
                 <div class="innerContainer21">
                     <div class="aboutImg">
-                        <img src="/ui/images/pexels-hidden-couple-3048527 1.png" alt="">
+                        <img src="pexels-hidden-couple-3048527 1.png" alt="">
                     </div>
                 </div>
                 <div class="innerContainer22" id="about" >
